--- a/_posts/2011-07-19-tcpdump.markdown
+++ b/_posts/2011-07-19-tcpdump.markdown
@@ -26,14 +26,20 @@ Notable flags:
 Basic decoded information:
 ```root@localhost:~# tcpdump -nnvvS```
 
-Full Ethernet frame:
+Full Ethernet frame using a full snaplen -s 1514:
 ```root@localhost:~# tcpdump -nnvvSXqs 1514 port 53```
 
-Capture to a file:
+Capture to a file with -w:
 ```root@localhost:~# tcpdump -s 1514 port 53 -w capture_file```
 
 Grouping requires parenthesis:
 ```root@localhost:~# tcpdump ’dst 8.8.8.8 and (dst port 80 or 53)’```
+
+Dump each packet in ASCII using -A, or in HEX and ASCII using -XX
+```tcpdump -nqtA -s 1514 port 5060```
+
+Capture using -n to print packet IP addresses, and not resolve the hostnames
+```tcpdump -n -i eth0```
 
 One of the most important lessons I've learnt using tcpdump is that the interface 'lo' is virtual. Packets sent to the localhost interface are not treated in the same way as packets sent to non-localhost interfaces such as eth0 by the kernel. That said, tcpdump will helpfully display such packets as if they were normal.
 
