--- a/_posts/2011-07-19-tcpdump.markdown
+++ b/_posts/2011-07-19-tcpdump.markdown
@@ -4,6 +4,9 @@ title: "Tcpdump"
 date: 2011-07-19
 categories: Security
 tags: tcpdump
+permalink: /:title.html
+redirect_from:
+  - "/security/2011/07/19/tcpdump.html"
 ---
 
 Notable flags:
